# ChangeLog for net-im/gg-transport
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-im/gg-transport/ChangeLog,v 1.20 2012/02/24 14:37:38 phajdan.jr Exp $

  24 Feb 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org>
  gg-transport-2.2.4.ebuild:
  x86 stable wrt bug #404175

  17 Feb 2012; Krzysztof Pawlik <nelchael@gentoo.org>
  gg-transport-2.2.4.ebuild:
  Add missing dev-libs/expat to RDEPEND, use emake, die if sed fails.

  17 Feb 2012; Agostino Sarubbo <ago@gentoo.org> gg-transport-2.2.4.ebuild:
  Stable for amd64, wrt bug #404175

  16 Feb 2012; Krzysztof Pawlik <nelchael@gentoo.org>
  gg-transport-2.2.2-r1.ebuild, gg-transport-2.2.4.ebuild:
  Update home page and download URI.

*gg-transport-2.2.4 (17 Apr 2010)

  17 Apr 2010; Krzysztof Pawlik <nelchael@gentoo.org> +files/jggtrans-2.2.4,
  +gg-transport-2.2.4.ebuild:
  Version bump.

  12 May 2008; Krzysiek Pawlik <nelchael@gentoo.org>
  gg-transport-2.2.2-r1.ebuild:
  Fix RDEPEND.

  05 May 2008; Krzysiek Pawlik <nelchael@gentoo.org>
  gg-transport-2.2.2-r1.ebuild:
  Add missing dependency: dev-util/pkgconfig, see bug #205504.

  10 Nov 2007; Krzysiek Pawlik <nelchael@gentoo.org>
  gg-transport-2.2.2-r1.ebuild:
  Fix variable quoting.

  12 Jun 2007; Krzysiek Pawlik <nelchael@gentoo.org>
  files/jggtrans-2.2.2-r1, gg-transport-2.2.2-r1.ebuild:
  Remove dependency on jabberd.

  24 Oct 2006; Krzysiek Pawlik <nelchael@gentoo.org> -files/jggtrans,
  -gg-transport-2.2.1.ebuild:
  Remove old version.

  24 Oct 2006; Daniel Gryniewicz <dang@gentoo.org>
  gg-transport-2.2.2-r1.ebuild:
  Marked ~amd64 for bug #133480

  23 Oct 2006; Andrej Kacian <ticho@gentoo.org>
  gg-transport-2.2.2-r1.ebuild:
  Stable on x86, bug #152543.

  04 Oct 2006; Krzysiek Pawlik <nelchael@gentoo.org>
  gg-transport-2.2.2-r1.ebuild:
  Fix header.

*gg-transport-2.2.2-r1 (04 Oct 2006)

  04 Oct 2006; Krzysiek Pawlik <nelchael@gentoo.org>