@@ -3,16 +3,18 @@ Hash: SHA512
 
 AUX jggtrans-2.2.2-r1 600 RMD160 6f975836d6a42956be3360caa9ad361c109c0205 SHA1 79738b0cc26603617ac2ce6cc2814dc92ead166f SHA256 0557916f203c9ad233390867e7246e2080bc556b922b35dc815b251c3fcb9fbd
 AUX jggtrans-2.2.4 597 RMD160 7037d6347bc3bd0d9a6bc51be39eba60ec61ab1a SHA1 0056f68b15d1e6a7fcad6d76a160770456070a07 SHA256 8c798300249748fe8b7704690ed481efd2f5b442e9065c07413b7a53edbb6ee4
-DIST jggtrans-2.2.2.tar.gz 1176462 RMD160 5e43d51ed600f09aba3b47c90d4226770f3b4cc0 SHA1 4452f94fdd848a9da7f9cf1eda4aed27cb36e940 SHA256 00a4956ec2aaf22eacb28b8af2ab0742caa3deffbd895ce86bcd76b6f604a007
 DIST jggtrans-2.2.4.tar.gz 796625 RMD160 a6fa8b073fdd61067fe5a5a6ed207b6d1e118e5c SHA1 397700ba87d2384f11b3402b875dfee3d3fc2af3 SHA256 678db2bef8e867889715663188f6ac785c7bf6e1bd0840a000f0a76b28892830
-EBUILD gg-transport-2.2.2-r1.ebuild 1262 RMD160 afd446371e2d272013474a1e4328d40bcc0506d2 SHA1 877ee7e933961c6dab41e9501fe171017b2a6051 SHA256 5aeaf85d1ab036ef86a8a16772516810b57be83df722553f5eeda2a35d1712e1
 EBUILD gg-transport-2.2.4.ebuild 1325 RMD160 9c040285604eb446413406985e5928ab0be9c4af SHA1 ca7b0fd8ea41e5171062fd884d09447eeb162772 SHA256 a5a71dc95c8ce221d82ae6e1286cd741c521e97376d16753096cf1b4501ecd48
-MISC ChangeLog 3201 RMD160 faf281f4beac260a37d985491da54e4b1f14aa18 SHA1 a9e99fda373a12edcad3dd754bdade62e3a6537d SHA256 30b2ce7273af3ea79e7b1a30339bf0da5e74aeef9ad8e5e78ccd1ac69bd20e92
+MISC ChangeLog 3309 RMD160 a14a2f864c637a1a8dc49b3e13f002dd6a213f05 SHA1 3c9bce171c57f87d512b3733b55852f9489ccb07 SHA256 ba7a3ca4ac08e12f27d25e0e2c9d42984905f17b6759d0d05dbd208023628a18
 MISC metadata.xml 398 RMD160 30435a8048fb12d424512fe2ac289b80bcedf064 SHA1 74680536b9e0964ae0ff7abbba0fa8aaa32c929c SHA256 36762a51d0215661e9b8ffc9de6a61670a377e7e55a1c4e7de0c3a58b8dddfcc
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.17 (GNU/Linux)
+Version: GnuPG v2.0.18 (GNU/Linux)
 
-iEYEAREKAAYFAk9HoL8ACgkQuUQtlDBCeQJ3OQCffHOISDNsBl/FuBu1pHB98afn
-4LAAnRdPCy9zwFFT9cSPQHgSFPRs3KL+
-=j9MI
+iQEcBAEBCgAGBQJPR6I7AAoJEBZyv1r2qA5Gp3AH/1g9i5CtfZ1xQS/OOHesIPdE
+lJ/F22Prw9AnA/dZpVJTFyfM9T2AwRozJcX+6eu4boFjW0PGjAN1JnEaLSFUCnaq
+lyM69EH6/zP7XE2MtGsCM+dRYcosl+jvVMh9xaTmFrNb9pTXybbtAGcHitlNoELg
+HOsFquHiOwTABaim/A+5DkTSVCNEZX5uT4kYXgDxfeqhQqo5U4mTudyol8qiaXhg
+JuGG8ULQJhXXHBbz/12xc2YUuJ1KfRFXfEo4LDr64HVilVoaJwB1nXhfvbwPHTJL
+treS8B+BSeksuatO/hD/Mz+SIaUVoLedfAkKT9w9VoT6zoHc32aU4a0XO/EQAjY=
+=wenY
 -----END PGP SIGNATURE-----
