@@ -1,6 +1,10 @@
 # ChangeLog for net-im/gg-transport
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-im/gg-transport/ChangeLog,v 1.20 2012/02/24 14:37:38 phajdan.jr Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-im/gg-transport/ChangeLog,v 1.21 2012/02/24 14:44:00 nelchael Exp $
+
+  24 Feb 2012; Krzysztof Pawlik <nelchael@gentoo.org>
+  -gg-transport-2.2.2-r1.ebuild:
+  Remove old version.
 
   24 Feb 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org>
   gg-transport-2.2.4.ebuild:
